schema/testdata/validation_api_names_are_models/schema.keel
model Post {
  operations {
    get getPost(id)
  }
}

api Web {
  models {
    Post
    UnknownModel
  }
}
