schema/testdata/errors/api_names_are_models.keel
model Post {
}

api Web {
    models {
        Post
        //expect-error:9:21:E047:api 'Web' has an unrecognised model UnknownModel
        UnknownModel
    }
}
